--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="invalid_credentials">Invalid credentials entered</string>
     <string name="messages">Messages</string>
     <string name="profile">Profile</string>
+    <string name="no_user_id_was_provided">No user id was provided</string>
+    <string name="requested_user_does_not_exist">Requested user does not exist</string>
 </resources>
