--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="space_photo">" photo"</string>
     <string name="your_message">Your message</string>
     <string name="send_message">Send message</string>
+    <string name="you">"You: "</string>
 </resources>
