--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="your_message">Your message</string>
     <string name="send_message">Send message</string>
     <string name="you">"You: "</string>
+    <string name="conversation_between_this_users_doesn_t_exist">Conversation between this users doesn\'t exist</string>
 </resources>
