--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="send_message">Send message</string>
     <string name="you">"You: "</string>
     <string name="conversation_between_this_users_doesn_t_exist">Conversation between this users doesn\'t exist</string>
+    <string name="connect">Connect</string>
 </resources>
