--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="delete_account">Delete account</string>
     <string name="no_fcmtoken_exception">User can\'t have empty FCM token something must have gone wrong.</string>
     <string name="user_with_such_email_already_exists">User with such email already exists.</string>
+    <string name="new_match">New Match!</string>
 </resources>
