--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,6 @@
     <string name="inappropriate_profile">Inappropriate profile</string>
     <string name="abuse">Abuse</string>
     <string name="spam_scam">Spam / Scam</string>
+    <string name="camera_permission_denied">Camera permission denied.</string>
+    <string name="camera_permission_denied_try_again">Camera permission denied. Try again.</string>
 </resources>
