--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,13 @@
     <string name="camera_permission_denied_try_again">Camera permission denied. Try again.</string>
     <string name="write_to_storage_permission_denied">Write to storage permission denied.</string>
     <string name="write_to_storage_permission_denied_try_again">Write to storage permission denied. Try again.</string>
+    <string name="friendzilla_find_a_friend_logo">FriendZilla find a friend logo</string>
+    <string name="sign_up_to_continue">Sign up to continue</string>
+    <string name="sign_in_with_email">Sign in with email</string>
+    <string name="or_sign_in_with">or sign in with</string>
+    <string name="i_am_a">I am a</string>
+    <string name="credentials">Credentials</string>
+    <string name="woman">Woman</string>
+    <string name="man">Man</string>
+    <string name="check">Check</string>
 </resources>
